考勤和行为

--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -385,6 +385,14 @@
 						var options = JSON.parse(optionsJson);
 						var id = _self.getAttribute('id');
 						_self.picker = new $M.DtPicker(options);
+						//设置默认值
+						setTimeout(function() {
+							if(lx == 'fsrq') {
+								_self.picker.setSelectedValue(talkTitle.time);
+							} else if(lx == 'record') {
+								_self.picker.setSelectedValue(talkTitle.record);
+							} 
+						}, 100);
 						_self.picker.show(function(rs) {
 							console.log('选择结果: ' + rs.text);
 							if(lx == 'fsrq') {
