--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -428,13 +428,11 @@
 							var value=atArr[i].value;
 							var t_showCnSub=atArr[i].showCnSub;
 							if(attendanceType==value&&t_showCnSub==1){//如果是课堂考勤
-								attendanceDetialData.jckmShow=="1";
-							}else{
-								attendanceDetialData.jckmShow=="0";
+								attendanceDetialData.jckmShow="1";
 							}
 						}
 						nodes.attendanceTime = attendanceDetialData.attendanceDetail.attendanceTime; //给nodes对象赋值，用于修改操作
-						if(attendanceDetialData.showCnSub=="1"){//如果是课堂考勤，解析节次和科目信息
+						if(attendanceDetialData.jckmShow=="1"){//如果是课堂考勤，解析节次和科目信息
 							nodes.classNames = attendanceDetialData.attendanceDetail.period;
 							var classArr = attendanceDetialData.attendanceDetail.classNodes.split(",");
 							nodes.classNodes = classArr;
@@ -797,7 +795,7 @@
 							if(attendanceDetialData.jckmShow==1){
 								if(obj.classNodes.length===0){
 									mui.toast('请选择考勤节次');
-									break;
+									return 0;
 								}
 							}
 							var params = {
